--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "A website to display Sanskrit texts in multiple languages."
   email: stotra&middot;samhita@gmail&middot;com
   disqus-shortname:
-  twitter: #username
+  twitter: stotrasamhita
   facebook: StotraSamhita
   google:
     plus: #username
