--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ owner:
   facebook: StotraSamhita
   google:
     plus: #username
-    analytics:
+    analytics: UA-104950552-1
     verify:
     ad-client:
     ad-slot:
