--- a/_config.yml
+++ b/_config.yml
@@ -57,5 +57,10 @@ owner:
   flickr: #username
   codepen: #username
 
+comments:
+  provider: "disqus"
+  disqus:
+    shortname: "stotrasamhita"
+
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
