--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   avatar: stotrasamhita.jpg
   bio: "A website to display Sanskrit texts in multiple languages."
   email: stotra&middot;samhita@gmail&middot;com
-  disqus-shortname:
+  disqus-shortname: stotrasamhita
   twitter: stotrasamhita
   facebook: StotraSamhita
   google:
