--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            StotraSamhita
 locale:           en_US
-url:              
+url:              https://stotrasamhita.github.io/   
 
 
 # Jekyll configuration
