--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Stotra Samhita
   avatar: stotrasamhita.jpg
-  bio: "A website to display Sanskrit texts in multiple languages."
+  bio: "A website to display Sanskrit texts in multiple Bharatiya lipis."
   email: stotra&middot;samhita@gmail&middot;com
   disqus-shortname: stotrasamhita
   twitter: stotrasamhita
